@@ -1,3 +1,9 @@
+2007-07-11  Dan Williams  <dcbw@redhat.com>
+
+	* src/dhcp-manager/nm-dhcp-manager.c
+		- (nm_dhcp_dbus_set_state): only cancel the DHCP timeout when the DHCP
+			client gets a valid lease
+
 2007-07-05  Dan Williams  <dcbw@redhat.com>
 
 	* src/nm-device-802-11-mesh-olpc.c
